k8s/policies/networkpolicies/monitoring/allow-from-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-gateway
  namespace: monitoring
  labels:
    app.kubernetes.io/name: fleetops-network-policy
    app.kubernetes.io/component: network-policy
    app.kubernetes.io/environment: monitoring
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: fleetops-platform
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 3000
